--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,13 @@ hr {
     background-color: #e5e5e5;
 }
 
+
+/* Page */
+.page {
+    overflow: hidden;
+}
+
+
 /* Container */
 .container {
     width: 100%;
@@ -44,6 +51,8 @@ hr {
     justify-content: center;
     width: 100%;
     height: 100vh;
+    min-height: 820px;
+    position: relative;
 
     background: url("../images/intro.jpg") center no-repeat;
     -webkit-background-size: cover;
@@ -95,6 +104,24 @@ hr {
     left: 0;
     right: 0;
     z-index: 1000;
+}
+
+.header.fixed {
+    padding: 10px 0;
+
+    background-color: #eb8b8d;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translate3d(0, 0, 0);
+}
+
+.header.active {
+    background-color: #eb8b8d;
 }
 
 .header__inner {
@@ -156,6 +183,84 @@ hr {
 
 .nav__link.active {
     color: #fce38a;
+}
+
+
+/* Nav toggle */
+.nav-toggle {
+    width: 30px;
+    padding: 10px 0;
+    display: none;
+
+    font-size: 0;
+    color: transparent;
+
+    border: 0;
+    background: none;
+    cursor: pointer;
+
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    z-index: 1;
+}
+
+.nav-toggle:focus {
+    outline: 0;
+}
+
+.nav-toggle__item {
+    display: block;
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+
+    transition: background .2s linear;
+}
+
+.nav-toggle.active .nav-toggle__item {
+    background: none;
+}
+
+.nav-toggle__item:before,
+.nav-toggle__item:after {
+    content: "";
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+
+    position: absolute;
+    left: 0;
+    z-index: 1;
+
+    transition: transform .2s linear;
+}
+
+.nav-toggle__item:before {
+    top: -8px;
+}
+
+.nav-toggle__item:after {
+    bottom: -8px;
+}
+
+.nav-toggle.active .nav-toggle__item:before {
+    transform-origin: left top;
+    transform: rotate(45deg) translate3d(0px, -2px, 0)
+}
+
+.nav-toggle.active .nav-toggle__item:after {
+    transform-origin: left bottom;
+    transform: rotate(-45deg) translate3d(0px, 3px, 0);
 }
 
 
@@ -304,14 +409,14 @@ hr {
 
 /* Card */
 .card {
-    margin-top: 80px;
+    margin: 80px -15px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .card__item {
-    width: 33.3333%;
+    width: 33.33333%;
     padding: 0 15px;
 }
 
@@ -439,7 +544,7 @@ hr {
     margin-bottom: 40px;
 }
 
-.services__item--border{
+.services__item--border {
     border-bottom: 1px solid #e5e5e5;
 }
 
@@ -476,7 +581,6 @@ hr {
     display: block;
     max-width: 100%;
     height: auto;
-    
 }
 
 .devices__item--iphone {
@@ -490,12 +594,20 @@ hr {
 /* We do */
 .wedo {
     display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
 }
 
 .wedo__item {
     width: 50%;
+    padding: 0 15px;
 }
 
+.wedo__img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 
 /* Accordion */
 
@@ -571,16 +683,24 @@ hr {
 
 /* Reviews */
 .reviews {
-    padding: 0 110px;
     position: relative;
 }
 
+.reviews .slick-slider {
+    padding: 0 110px;
+}
+
 .reviews__item {
+    min-height: 210px;
     padding-left: 255px;
     position: relative;
 }
 
 .reviews__photo {
+    display: block;
+    width: 210px;
+    height: 210px;
+
     border: 2px solid #95e1d3;
     border-radius: 50%;
 
@@ -616,9 +736,14 @@ hr {
     background-color: #f38181;
 }
 
-.reviews__btn {
+.slick-arrow {
+    display: block;
     font-size: 0;
     color: transparent;
+
+    border: 0;
+    background: none;
+    cursor: pointer;
 
     position: absolute;
     top: 50%;
@@ -626,7 +751,11 @@ hr {
     transform: translateY(-50%);
 }
 
-.reviews__btn:after {
+.slick-arrow:focus {
+    outline: 0;
+}
+
+.slick-arrow:after {
     content: "";
     display: block;
     width: 16px;
@@ -636,12 +765,13 @@ hr {
     border-left: 2px solid #ccc;
 }
 
-.reviews__btn--prev {
+.slick-prev {
     left: 0;
     transform: rotate(-45deg);
 }
 
-.reviews__btn--next {
+.reviews__btn--next,
+.slick-next {
     right: 0;
     transform: rotate(135deg);
 }
@@ -684,6 +814,17 @@ hr {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 -15px;
+}
+
+.logos__item {
+    padding: 0 15px;
+}
+
+.logos__img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 
@@ -811,6 +952,7 @@ hr {
 
 .blog {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -943,8 +1085,14 @@ hr {
 
 .footer__inner {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    margin: 0 -15px;
     padding-bottom: 65px;
+}
+
+.footer__col {
+    padding: 0 15px;
 }
 
 .footer__col--first {
@@ -1066,12 +1214,14 @@ hr {
 }
 
 .instagram__item {
-    width: 32.33333%;
+    width: 33%;
     border-bottom: 1px solid #fff;
 }
 
 .instagram__item img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 
@@ -1151,162 +1301,395 @@ hr {
     color: #f38181;
 }
 
-/*laptop*/
-@media (max-width: 1230px){
 
-    /*intro*/
-    .intro__suptitle{
+
+
+@media (max-width: 1230px) {
+
+    /* Intro */
+    .intro__suptitle {
         font-size: 52px;
     }
-    
-    .intro__title{
+
+    .intro__title {
         font-size: 120px;
     }
-    
+
+    /* Reviews */
+    .reviews__text {
+        font-size: 20px;
+    }
 }
 
-/*pad*/
-@media (max-width: 990px){  
-    
-       /*intro*/
-    .intro__suptitle{
+@media (max-width: 990px) {
+
+    /* Intro */
+    .intro__suptitle {
         font-size: 32px;
     }
-    
-    .intro__title{
+
+    .intro__title {
         font-size: 80px;
     }
-    
-    .stat{
-        justify-content: center;
+
+    /* Stat */
+    .stat {
+       justify-content: center;
     }
-    .stat__item{
+
+    .stat__item {
         flex: none;
-        width: 33.33333%;   
+        width: 33.33333%;
         padding-top: 30px;
         padding-bottom: 30px;
-        
+
         border: 0;
     }
-    
-    .stat__item:last-child{
+
+    .stat__item:last-child {
         border-right: 0;
     }
 
-    .services__item{
+    /* Services */
+    .services__item {
         width: 50%;
         padding-bottom: 0;
     }
-    
-    .services__item--border{
+
+    .services__item--border {
         border-bottom: 0;
-        
+    }
+
+    /* Reviews */
+    .reviews .slick-slider {
+        padding: 0 60px;
+    }
+
+    .reviews__photo {
+        width: 150px;
+        height: 150px;
+    }
+
+    .reviews__item {
+        padding-left: 175px;
+    }
+
+    /* Clients */
+    .clients {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+    .clients__item {
+        width: 100%;
+        padding-right: 0;
+    }
+
+    .clients__item:last-child {
+        margin-bottom: 0;
+    }
+
+
+    /* Footer */
+    .footer__col--first {
+        width: 100%;
+    }
+
+    .footer__col--second,
+    .footer__col--third {
+        width: 50%;
+    }
+
+    /* Instagram */
+    .instagram {
+        justify-content: flex-start;
+    }
+
+    .instagram__item {
+        width: auto;
+        border-right: 1px solid white;
     }
 }
 
-/*portrait orientation*/
+@media (max-width: 770px) {
 
-@media (max-width: 770px){
-    
-    .nav{
-        display: none;
+    /* Intro */
+    .intro {
+        min-height: 650px;
     }
-    
-    .section{
+
+
+    /* Header */
+    .header {
+        padding: 10px 0;
+    }
+
+    /* Nav */
+    .nav {
+        display: none;
+        width: 100%;
+
+        position: absolute;
+        top: 100%;
+        left: 0;
+
+        background-color: #eb8b8d;
+    }
+
+    .nav.active {
+        display: block;
+    }
+
+    .nav__link {
+        display: block;
+        margin: 0;
+        padding: 8px 20px;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+
+
+    /* Section */
+    .section {
         padding: 40px 0;
     }
-    
-    .section--devices{
+
+    .section--devices {
         padding-bottom: 0;
     }
-    
-    .slider__text{
-        display: none;
-    }
-    
-    .slider__item.active:before{
-        width: 50%;
-    }
-    
-    .card{
+
+
+    /* Card */
+    .card {
         margin-top: 50px;
-        justify-content: center;  
-        
-    }
-    .card__item{
-        width: 100%;
-        max-width: 410px;
-        margin-bottom: 30px;    
-    }
-    
-    .card__item:last-child{
-        margin-bottom: 0;
-    }
-    
-    .services{
         justify-content: center;
     }
-    
-    .services__item{
+
+    .card__item {
+        width: 100%;
+        max-width: 410px;
+        margin-bottom: 30px;
+    }
+
+    .card__item:last-child {
+        margin-bottom: 0;
+    }
+
+
+    /* Slider */
+    .slider__text {
+        display: none;
+    }
+
+    .slider__item.active:before {
+        width: 50%;
+    }
+
+    /* Services */
+    .services {
+        justify-content: center;
+    }
+
+    .services__item {
         width: 100%;
         max-width: 400px;
         padding-left: 55px;
         padding-right: 0;
     }
-    
-    .services__icon{
+
+    .services__icon {
         left: 0;
+    }
+
+
+    /* Wedo */
+    .wedo__img {
+        display: none;
+    }
+
+    .wedo__item {
+        width: 100%;
+    }
+
+    /* Reviews */
+    .reviews__photo {
+        position: static;
+        margin: 0 auto 20px;
+    }
+
+    .reviews__item {
+        padding-left: 0;
+    }
+
+    .reviews__text {
+        font-size: 16px;
+    }
+
+    .reviews__author {
+        font-size: 20px;
+    }
+
+    /* Works */
+    .works {
+        flex-wrap: wrap;
+    }
+
+    .works__col {
+        flex: none;
+        width: 50%;
+    }
+
+    /* Blog */
+    .blog {
+        max-width: 380px;
+        margin: 0 auto;
+    }
+
+    .blog__item {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .blog__item:last-child {
+        margin-bottom: 0;
+    }
+
+
+    /* Footer */
+    .footer__col--second,
+    .footer__col--third {
+        width: 100%;
     }
 }
 
-/*phone*/
-@media (max-width: 575px){
-    
-       /*intro*/
-    .intro__suptitle{
+
+@media (max-width: 575px) {
+
+    /* Intro */
+    .intro__suptitle {
         font-size: 22px;
     }
-    
-    .intro__title{
+
+    .intro__title {
         font-size: 40px;
     }
-    
-    .section__suptitle{
+
+    /* Section */
+    .section__header {
+        margin-bottom: 50px;
+    }
+
+    .section__suptitle {
         font-size: 20px;
     }
-    
-    .section__title{
+
+    .section__title {
         font-size: 24px;
     }
-    
-    .section__tite:after{
+
+    .section__title:after {
         margin: 20px auto;
     }
-    
-    .section__header{
-        margin-bottom: 50%;
-    }
-    
-    .stat__item{
+
+    /* Stat */
+    .stat__item {
         width: 100%;
+
         border-bottom: 1px solid #b5eae0;
     }
-    
-    .stat__item:last-child{
+
+    .stat__item:last-child {
         border-bottom: 0;
     }
-    
-    .stat__count{
+
+    .stat__count {
         font-size: 52px;
     }
-    
+
+
+    /* Devices */
     .devices {
         max-width: 320px;
     }
-    
-    .devices__item--iphone{
+
+    .devices__item--iphone {
         width: 180px;
         bottom: -50px;
         right: -80px;
     }
+
+
+    /* Reviews */
+    .reviews .slick-slider {
+        padding: 0;
+    }
+
+    .slick-arrow {
+        top: 18%;
+    }
+
+    /* Logos */
+    .logos {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .logos__item {
+        width: 50%;
+        margin-bottom: 20px;
+    }
+
+    .logos__img {
+        margin: 0 auto;
+    }
+
+    /* Works */
+    .works__col {
+        width: 100%;
+    }
+
+
+    /* Clients */
+    .clients__photo {
+        position: static;
+    }
+
+    .clients__item {
+        padding-left: 0;
+        text-align: center;
+    }
+
+    .clients__text:before {
+        margin: 15px auto;
+    }
+
+
+    /* Blogs */
+    .blogs__img {
+        width: 80px;
+        height: 50px;
+    }
+
+    .blogs__title {
+        font-size: 10px;
+    }
+
+    /* Subscribe */
+    .subscribe {
+        flex-wrap: wrap;
+        max-width: none;
+    }
+
+    .subscribe__input {
+        margin-bottom: 10px;
+        border-right: 1px solid #e7e7e7;
+    }
+
+    .subscribe__input,
+    .subscribe__btn {
+        width: 100%;
+    }
+
 }
